[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indus-waveform-simulator"
version = "0.1.0"
description = "Streamlit-based Indus resonance & hologram simulator"
requires-python = ">=3.10"

dependencies = [
    "streamlit==1.32.0",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "matplotlib==3.8.2",
    "plotly==5.19.0",
    "pandas==2.2.0",
    "opencv-python==4.9.0.80",
    "Pillow==10.2.0",
    "python-multipart==0.0.6",
    "scikit-learn==1.4.0"
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/example/indus"
